--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   Copyright (C) 2014 The Android Open Source Project
 
   Licensed under the Apache License, Version 2.0 (the "License");
@@ -13,10 +12,10 @@
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-  -->
+-->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.bhagathsing.android.mytube" >
+    package="com.bhagathsing.android.mytube">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -25,8 +24,10 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
 
-    <!-- Set android.software.leanback to false, so the APK will be available to both
-    TV and regular devices. -->
+    <!--
+    Set android.software.leanback to false, so the APK will be available to both
+    TV and regular devices.
+    -->
     <uses-feature
         android:name="android.software.leanback"
         android:required="false" />
@@ -37,65 +38,66 @@
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
+        android:banner="@drawable/banner_tv"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/UAmpAppTheme"
-        android:banner="@drawable/banner_tv">
-
+        android:theme="@style/UAmpAppTheme">
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
         <!-- Main activity for music browsing on phone -->
         <activity
-            android:name="com.bhagathsing.android.mytube.ui.MusicPlayerActivity"
+            android:name=".ui.MusicPlayerActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
             <!-- Use this intent filter to get voice searches, like "Play The Beatles" -->
             <intent-filter>
                 <action android:name="android.media.action.MEDIA_PLAY_FROM_SEARCH" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
 
         <!-- Placeholder activity for phone UI -->
         <activity
-            android:name="com.bhagathsing.android.mytube.ui.PlaceholderActivity"
-            android:label="@string/app_name">
-        </activity>
+            android:name=".ui.PlaceholderActivity"
+            android:label="@string/app_name"></activity>
 
-        <!-- Proxy activity that opens either the NowPlaying TV or the mobile UI, depending on
-        the current environment -->
+        <!--
+        Proxy activity that opens either the NowPlaying TV or the mobile UI, depending on
+        the current environment
+        -->
         <activity
-            android:name="com.bhagathsing.android.mytube.ui.NowPlayingActivity"
-            android:icon="@drawable/ic_launcher">
-        </activity>
+            android:name=".ui.NowPlayingActivity"
+            android:icon="@drawable/ic_launcher"></activity>
 
         <!-- Main activity for Android TV user interface -->
         <activity
-            android:name="com.bhagathsing.android.mytube.ui.tv.TvBrowseActivity"
+            android:name=".ui.tv.TvBrowseActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.UAmp.TVLeanback" >
+            android:theme="@style/Theme.UAmp.TVLeanback">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name="com.bhagathsing.android.mytube.ui.tv.TvVerticalGridActivity"
-            android:theme="@style/Theme.UAmp.TVLeanback"
-            android:parentActivityName="com.bhagathsing.android.mytube.ui.tv.TvBrowseActivity" />
+            android:name=".ui.tv.TvVerticalGridActivity"
+            android:parentActivityName=".ui.tv.TvBrowseActivity"
+            android:theme="@style/Theme.UAmp.TVLeanback" />
 
         <!-- Android TV UI when playing a song -->
         <activity
-            android:name="com.bhagathsing.android.mytube.ui.tv.TvPlaybackActivity"
-            android:theme="@style/Theme.UAmp.TVLeanback"
-            android:parentActivityName="com.bhagathsing.android.mytube.ui.tv.TvBrowseActivity" />
+            android:name=".ui.tv.TvPlaybackActivity"
+            android:parentActivityName=".ui.tv.TvBrowseActivity"
+            android:theme="@style/Theme.UAmp.TVLeanback" />
 
         <!--
              (OPTIONAL) use this meta data to indicate which icon should be
@@ -127,11 +129,13 @@
             android:name="com.google.android.wearable.media.theme"
             android:resource="@style/WearTheme" />
 
-        <!-- Main music service, provides media browsing and media playback services to
+        <!--
+         Main music service, provides media browsing and media playback services to
          consumers through MediaBrowserService and MediaSession. Consumers connect to it through
-         MediaBrowser (for browsing) and MediaController (for play session control) -->
+         MediaBrowser (for browsing) and MediaController (for play session control)
+        -->
         <service
-            android:name="com.bhagathsing.android.mytube.MusicService"
+            android:name=".MusicService"
             android:exported="true"
             tools:ignore="ExportedService">
             <intent-filter>
@@ -139,44 +143,51 @@
             </intent-filter>
         </service>
 
-        <!--
-             (REQUIRED) use this meta data to to declare the app OptionsProvider.
-        -->
+        <!--              (REQUIRED) use this meta data to to declare the app OptionsProvider. -->
         <meta-data
             android:name="com.google.android.gms.cast.framework.OPTIONS_PROVIDER_CLASS_NAME"
             android:value="com.bhagathsing.android.mytube.CastOptionsProvider" />
 
-        <!-- A full screen activity showing controls and a seek bar for
-             the current playing music -->
+        <!--
+             A full screen activity showing controls and a seek bar for
+             the current playing music
+        -->
         <activity
-            android:name="com.bhagathsing.android.mytube.ui.FullScreenPlayerActivity"
+            android:name=".ui.FullScreenPlayerActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
-            android:parentActivityName="com.bhagathsing.android.mytube.ui.MusicPlayerActivity">
+            android:parentActivityName=".ui.MusicPlayerActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.bhagathsing.android.mytube.ui.MusicPlayerActivity"/>
+                android:value="com.bhagathsing.android.mytube.ui.MusicPlayerActivity" />
         </activity>
-        <activity android:name="com.bhagathsing.android.mytube.ui.SearchableActivity"
-                  android:windowSoftInputMode="adjustNothing"
-                  android:screenOrientation="portrait">
+        <activity
+            android:name=".ui.SearchableActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustNothing">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
-        <!-- A receiver that will receive media buttons and send as
+        <!--
+             A receiver that will receive media buttons and send as
             intents to your MediaBrowserServiceCompat implementation.
             Required on pre-Lollipop. More information at
-            http://developer.android.com/reference/android/support/v4/media/session/MediaButtonReceiver.html -->
-        <receiver android:name="android.support.v4.media.session.MediaButtonReceiver" >
+            http://developer.android.com/reference/android/support/v4/media/session/MediaButtonReceiver.html
+        -->
+        <receiver android:name="android.support.v4.media.session.MediaButtonReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.MEDIA_BUTTON" />
             </intent-filter>
         </receiver>
 
+        <activity android:name=".model.YoutubeAPIActivity"
+            android:theme="@style/Theme.Transparent">
+        </activity>
     </application>
 
 </manifest>
